# SupaQML

./: CMakeLists.txt  Main.qml  README.md  main.cpp  server.cpp  server.h
SupaQML/: CMakeLists.txt  supaauth.cpp  supaauth.h  supaserver.cpp  supaserver.h  supasocket.cpp  supasocket.h
